{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 20,
  "lineage": "ce5ecaeb-c4ce-994c-bed2-a1dc302992aa",
  "resources": [
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:290294660813:network-acl/acl-0b26e17d64af3c564",
            "default_network_acl_id": "acl-0b26e17d64af3c564",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b26e17d64af3c564",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "290294660813",
            "region": "eu-west-1",
            "subnet_ids": [
              "subnet-0802e2a1cac6d70b5",
              "subnet-0afbc1386daca4a1c"
            ],
            "tags": {
              "Managed": "terraform",
              "Name": "vpc-game-platform-default"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "vpc-game-platform-default"
            },
            "vpc_id": "vpc-055daa4d9a0048820"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:290294660813:route-table/rtb-05760ba6b1ca1464b",
            "default_route_table_id": "rtb-05760ba6b1ca1464b",
            "id": "rtb-05760ba6b1ca1464b",
            "owner_id": "290294660813",
            "propagating_vgws": null,
            "region": "eu-west-1",
            "route": [],
            "tags": {
              "Managed": "terraform",
              "Name": "vpc-game-platform-default"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "vpc-game-platform-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-055daa4d9a0048820"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:290294660813:security-group/sg-0f167f403a62d8809",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f167f403a62d8809",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "290294660813",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed": "terraform",
              "Name": "vpc-game-platform-default"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "vpc-game-platform-default"
            },
            "vpc_id": "vpc-055daa4d9a0048820"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04eb20463a688659b",
            "arn": "arn:aws:ec2:eu-west-1:290294660813:elastic-ip/eipalloc-04eb20463a688659b",
            "domain": "vpc",
            "id": "eipalloc-04eb20463a688659b",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-108-128-3-229.eu-west-1.compute.amazonaws.com",
            "public_ip": "108.128.3.229",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-1",
            "tags": {
              "Managed": "terraform",
              "Name": "vpc-game-platform-eu-west-1a"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "vpc-game-platform-eu-west-1a"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290294660813",
            "id": "eipalloc-04eb20463a688659b",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:290294660813:internet-gateway/igw-049bd7ea192ff324a",
            "id": "igw-049bd7ea192ff324a",
            "owner_id": "290294660813",
            "region": "eu-west-1",
            "tags": {
              "Managed": "terraform",
              "Name": "vpc-game-platform"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "vpc-game-platform"
            },
            "vpc_id": "vpc-055daa4d9a0048820"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290294660813",
            "id": "igw-049bd7ea192ff324a",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04eb20463a688659b",
            "association_id": "eipassoc-03237ec43d2e63bf9",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-01596351cc0868854",
            "network_interface_id": "eni-006084331ca79f999",
            "private_ip": "10.0.1.6",
            "public_ip": "108.128.3.229",
            "region": "eu-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0afbc1386daca4a1c",
            "tags": {
              "Managed": "terraform",
              "Name": "vpc-game-platform-eu-west-1a"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "vpc-game-platform-eu-west-1a"
            },
            "vpc_id": "vpc-055daa4d9a0048820"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290294660813",
            "id": "nat-01596351cc0868854",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d92e10aa741dbbb51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01596351cc0868854",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "eu-west-1",
            "route_table_id": "rtb-0d92e10aa741dbbb5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290294660813",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-1",
            "route_table_id": "rtb-0d92e10aa741dbbb5"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-049bd7ea192ff324a",
            "id": "r-rtb-0c691c44987eebbeb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "eu-west-1",
            "route_table_id": "rtb-0c691c44987eebbeb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290294660813",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-1",
            "route_table_id": "rtb-0c691c44987eebbeb"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:290294660813:route-table/rtb-0d92e10aa741dbbb5",
            "id": "rtb-0d92e10aa741dbbb5",
            "owner_id": "290294660813",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [],
            "tags": {
              "Managed": "terraform",
              "Name": "vpc-game-platform-private"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "vpc-game-platform-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-055daa4d9a0048820"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290294660813",
            "id": "rtb-0d92e10aa741dbbb5",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:290294660813:route-table/rtb-0c691c44987eebbeb",
            "id": "rtb-0c691c44987eebbeb",
            "owner_id": "290294660813",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [],
            "tags": {
              "Managed": "terraform",
              "Name": "vpc-game-platform-public"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "vpc-game-platform-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-055daa4d9a0048820"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290294660813",
            "id": "rtb-0c691c44987eebbeb",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010c692839af066cd",
            "region": "eu-west-1",
            "route_table_id": "rtb-0d92e10aa741dbbb5",
            "subnet_id": "subnet-0802e2a1cac6d70b5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290294660813",
            "id": "rtbassoc-010c692839af066cd",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0719a9d2026d31b76",
            "region": "eu-west-1",
            "route_table_id": "rtb-0d92e10aa741dbbb5",
            "subnet_id": "subnet-0f6e80685dc26e784"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290294660813",
            "id": "rtbassoc-0719a9d2026d31b76",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0caf80fce85915d8e",
            "region": "eu-west-1",
            "route_table_id": "rtb-0c691c44987eebbeb",
            "subnet_id": "subnet-0afbc1386daca4a1c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290294660813",
            "id": "rtbassoc-0caf80fce85915d8e",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8b7f0247ca67c21",
            "region": "eu-west-1",
            "route_table_id": "rtb-0c691c44987eebbeb",
            "subnet_id": "subnet-0b2f7a36fa06fc36d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290294660813",
            "id": "rtbassoc-0c8b7f0247ca67c21",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:290294660813:subnet/subnet-0802e2a1cac6d70b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0802e2a1cac6d70b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "290294660813",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Managed": "terraform",
              "Name": "vpc-game-platform-private-eu-west-1a"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "vpc-game-platform-private-eu-west-1a"
            },
            "vpc_id": "vpc-055daa4d9a0048820"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290294660813",
            "id": "subnet-0802e2a1cac6d70b5",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:290294660813:subnet/subnet-0f6e80685dc26e784",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6e80685dc26e784",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "290294660813",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Managed": "terraform",
              "Name": "vpc-game-platform-private-eu-west-1b"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "vpc-game-platform-private-eu-west-1b"
            },
            "vpc_id": "vpc-055daa4d9a0048820"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290294660813",
            "id": "subnet-0f6e80685dc26e784",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:290294660813:subnet/subnet-0afbc1386daca4a1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0afbc1386daca4a1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "290294660813",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Managed": "terraform",
              "Name": "vpc-game-platform-public-eu-west-1a"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "vpc-game-platform-public-eu-west-1a"
            },
            "vpc_id": "vpc-055daa4d9a0048820"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290294660813",
            "id": "subnet-0afbc1386daca4a1c",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:290294660813:subnet/subnet-0b2f7a36fa06fc36d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2f7a36fa06fc36d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "290294660813",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Managed": "terraform",
              "Name": "vpc-game-platform-public-eu-west-1b"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "vpc-game-platform-public-eu-west-1b"
            },
            "vpc_id": "vpc-055daa4d9a0048820"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290294660813",
            "id": "subnet-0b2f7a36fa06fc36d",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:290294660813:vpc/vpc-055daa4d9a0048820",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b26e17d64af3c564",
            "default_route_table_id": "rtb-05760ba6b1ca1464b",
            "default_security_group_id": "sg-0f167f403a62d8809",
            "dhcp_options_id": "dopt-0ad9799b8c46191b4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-055daa4d9a0048820",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05760ba6b1ca1464b",
            "owner_id": "290294660813",
            "region": "eu-west-1",
            "tags": {
              "Managed": "terraform",
              "Name": "vpc-game-platform"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "vpc-game-platform"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290294660813",
            "id": "vpc-055daa4d9a0048820",
            "region": "eu-west-1"
          }
        }
      ]
    }
  ]
}